# gnome-keyring

./: .gitlab-ci.yml  meson.build  meson_options.txt
daemon/: meson.build
daemon/dbus/: gkd-secret-objects.c  gkd-secret-portal.c  gkd-secret-service.c  meson.build
egg/: meson.build
pam/: meson.build
pkcs11/: meson.build
pkcs11/gkm/: meson.build
pkcs11/gnome2-store/: meson.build
pkcs11/rpc-layer/: meson.build
pkcs11/secret-store/: gkm-secret-item.c  meson.build
pkcs11/ssh-store/: meson.build
pkcs11/wrap-layer/: meson.build
pkcs11/xdg-store/: meson.build
tool/: meson.build
